badge add route
